--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1e1e2f;
+    background-color: #401616;
     color: white;
     font-family: Arial, sans-serif;
     display: flex;
@@ -90,3 +90,4 @@ body {
     margin: 20px 0;
 
   }
+
