--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   }
   
   form {
-    background-color: #401616;
+    background-color: #2b2b3c;
     padding: 30px;
     border-radius: 10px;
     width: 350px;
@@ -90,4 +90,5 @@ body {
     margin: 20px 0;
 
   }
+
 
