--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #2b2b3c;
+    background-color: #a1a1ad;
     color: white;
     font-family: Arial, sans-serif;
     display: flex;
@@ -10,7 +10,7 @@ body {
   }
   
   form {
-    background-color: #401616;
+    background-color: #232325;
     padding: 30px;
     border-radius: 10px;
     width: 350px;
@@ -90,6 +90,7 @@ body {
     margin: 20px 0;
 
   }
+
 
 
 
